--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,5 +24,12 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias 
+MYAPP_UPLOAD_STORE_PASSWORD=app_hans
+MYAPP_UPLOAD_KEY_PASSWORD=app_hans
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+AsyncStorage_db_size_in_MB=10
