--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "react-native run-android --variant=release",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -27,6 +27,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.1",
     "react-router-native": "^5.2.0",
+    "@react-native-community/eslint-config": "1.1.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
