--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.6.0")
+        classpath("com.android.tools.build:gradle:3.5.3")
+        implementation project(':@react-native-community_async-storage')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
